refactor: 주문 시 주문 정보를 스냅샷으로 가져와 비교한 다음 주문을 생성